src/tests/snapshots/niri__tests__window_opening__check_target_size@omT-ofT-dwP0.25-dhU-b-wfsBU-t.snap
---
source: src/tests/window_opening.rs
description: "open maximized: true\nopen floating: true\ndefault column width: P0.25\ndefault window height: U\nborder on\nwant fullscreen: BU\ntabbed"
expression: snapshot
---
initial configure:
size: 312 × 0, bounds: 1272 × 712, states: []

post-map configures:
size: 1 × 1, bounds: 1272 × 712, states: [Activated]
